# niagara-haystack-mcp

./: Dockerfile  README.md  claude_desktop_configs.json  docker-compose.yml  mcp.json  niagara_mcp.py  pyproject.toml  relay_api_example.py  requirements.txt
