[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "niagara-mcp"
version = "1.0.0"
description = "MCP server for Tridium Niagara Building Automation Systems via Haystack API"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastmcp>=0.1.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0"
]

[project.scripts]
niagara-mcp = "niagara_mcp:main"

[tool.setuptools]
py-modules = ["niagara_mcp"]